Ledger || The page suggestion title text mouse pointer to hover box is not showing correctly.

--- a/public/assets/css/crater.css
+++ b/public/assets/css/crater.css
@@ -10670,7 +10670,8 @@ a {
 }
 a:hover, a:focus {
   color: #355282;
-  border: 1px solid rgba(187, 187, 187, 0.5) !important;
+  padding: 1px 4px;
+  border: 2px solid rgba(53, 53, 53, 0.5) !important;
   text-decoration: none;
   border-radius: 30px;
 }
